Tests/RunCMake/NinjaMultiConfig/SimpleCrossConfigs-all-relwithdebinfo-in-release-graph-build-stderr.txt
^ninja: error: unknown target 'all:RelWithDebInfo'$
